--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1625,7 +1625,7 @@ section.lazy-placeholder:after {
   color: #767676;
 }
 .cid-te791TWaU9 .mbr-text {
-  color: #4f4943;
+  color: #767676;
 }
 .cid-te791TWaU9 .mbr-text DIV {
   text-align: center;
@@ -2512,6 +2512,21 @@ section.lazy-placeholder:after {
 .cid-tXF3OxO9iW .mbr-text {
   color: #767676;
   text-align: left;
+}
+.cid-tXFa9qrwsQ {
+  padding-top: 30px;
+  padding-bottom: 15px;
+  background-color: #ffffff;
+}
+.cid-tXFa9qrwsQ .mbr-text,
+.cid-tXFa9qrwsQ blockquote {
+  color: #767676;
+}
+.cid-tXFa9qrwsQ .mbr-text P {
+  text-align: center;
+}
+.cid-tXFa9qrwsQ .mbr-text {
+  color: #465052;
 }
 .cid-tBp8RhBcuI {
   padding-top: 60px;
