--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -693,7 +693,7 @@ section.lazy-placeholder:after {
 .cid-te11zeVEEc .section-text {
   padding: 2rem 0;
   text-align: center;
-  color: #073b4c;
+  color: #0f7699;
 }
 .cid-te11zeVEEc .inner-container {
   margin: 0 auto;
@@ -1109,7 +1109,7 @@ section.lazy-placeholder:after {
   background-color: #ffffff;
 }
 .cid-tGuSyZ0xTc .mbr-text {
-  color: #073b4c;
+  color: #5b686b;
 }
 .cid-tGuTw95vAS {
   padding-top: 45px;
